Inserción de imagen del último fragment y cambio de nombre de último fragment en el menú principal

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,5 @@
     <string name="app_name">ProyectoFinal</string>
     <string name="title_home">Portada</string>
     <string name="title_dashboard">Sensores</string>
-    <string name="title_notifications">Información</string>
+    <string name="title_notifications">Gracias</string>
 </resources>
